--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,30 @@ jobs:
         uses: actions/checkout@v5.0.0
         
       - name: Setup Node JS
-        
-      
+        uses: actions/setup-node@v5.0.0
+        with:
+          node-version: 24.9.0
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build App
+        run: npm run build
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: build-artifact
+          path: dist
+
+  Deploy:
+    needs: Build
+    runs-on: self-hosted
+
+    steps:
+      - name: Deploy Using Docker Compose
+        run: |
+          cd $GITHUB_WORKSPACE
+          docker compose down || true
+          docker compose up -d --build
+    
