--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,4 +47,6 @@ jobs:
           cd $GITHUB_WORKSPACE
           docker compose down || true
           docker compose up -d --build
+          docker ps
+          docker logs team-app1
     
