--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,10 @@ name: Build Team React App
 
 
 on:
-  push:
-    branches: [main]  
+  # push:
+  #   branches: [main]  
+  pull_request:
+    branches: [main]
 
   workflow_dispatch:
 
